Final version. New react-based app for html compliance
New folder structure otherwise project is mature
